--- a/package.json
+++ b/package.json
@@ -9,14 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "axios": "^1.7.7",
-    "chart.js": "^4.4.5",
-    "icons": "^1.0.0",
+    "chartjs-2": "^0.0.1-security",
+    "date-fns": "^4.1.0",
     "next": "14.2.15",
-    "react": "^18.3.1",
+    "react": "^18",
     "react-chartjs-2": "^5.2.0",
-    "react-dom": "^18",
-    "react-icons": "^5.3.0"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@types/node": "^20",
